--- a/templates/index.html
+++ b/templates/index.html
@@ -5,41 +5,66 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
-* {
-  box-sizing: border-box;
-}
+    * {
+      box-sizing: border-box;
+    }
 
-body {
-  font-family: Arial, Helvetica, sans-serif;
-}
+    body {
+      font-family: Arial, Helvetica, sans-serif;
+    }
 
-/* Style the header */
-header {
-  background-color: #666;
-  padding: 30px;
-  text-align: center;
-  font-size: 35px;
-  color: white;
-}
+    /* Style the header */
+    header {
+      background-color: #666;
+      padding: 30px;
+      text-align: center;
+      font-size: 35px;
+      color: white;
+    }
 
-article {
-  float: left;
-  padding: 20px;
-  width: 70%;
-  background-color: #f1f1f1;
-}
+    article {
+      float: left;
+      padding: 20px;
+      width: 70%;
+      background-color: #f1f1f1;
+    }
 
-/* Clear floats after the columns */
-section:after {
-  content: "";
-  display: table;
-  clear: both;
-}
+    /* Clear floats after the columns */
+    section:after {
+      content: "";
+      display: table;
+      clear: both;
+    }
 
-input {
-	width: 200px;
-}
+    input {
+    	width: 200px;
+    }
 
+    table {
+        border-spacing: 0;
+        border-collapse: collapse;
+    }
+
+    th:tr{
+        color: blue;
+        text-align: center;
+        vertical-align: middle;
+    }
+
+    td{
+        padding: 8px 8px;
+        margin: 0px;
+        border: 1px solid black;
+        width: 40px;
+        text-align: center;
+        vertical-align: middle;
+    }
+
+    @media print {
+        body {
+            -webkit-print-color-adjust: exact;
+        }
+    }
 </style>
 </head>
 <body>
@@ -63,7 +88,7 @@ input {
     <section>
         <article>
             <input type="checkbox" name="scroll" value=true>
-            <input type="number" name="scroll_delay" min="0.1" step="0.1">
+            <input type="number" name="scroll_delay" min="0.1" step="0.1" value="0.3">
         </article>
     </section>
 
@@ -71,12 +96,28 @@ input {
     <section>
         <article>
             <input type="checkbox" name="transition" value="false">
-            <input type="number" name="transition_delay" min="0.010" step="0.005">
+            <input type="number" name="transition_delay" min="0.005" step="0.005" value="0.010">
         </article>
     </section>
-
+    <p></p>
     <input type="submit" value="Submit">
 </form>
 
+<form action="/custom_matrix" id="matrix_form">
+    <h2>Custom Matrix</h2>
+    <table>
+        {% for y in range(0, height) %}
+            <tr>
+                {% for x in range(0, width) %}
+                    <td>
+                        <input type="color" name="{{ x}}-{{ y }}" value="#110000" style="width: 20px">
+                    </td>
+                {% endfor %}
+            </tr>
+        {% endfor %}
+    </table>
+    <p></p>
+    <input type="submit" value="Set Matrix">
+</form>
 </body>
 </html>
